--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,10 +1,7 @@
 * Bugs and deficiencies:
-** Closing of blocks and parameter help is not working when keywords
-   are in fact unambiguous but only partially spelled out.
-   Workaround: First complete keyword with ALT+TAB
-
-** Completion: c*** command is not completed (not in the -completions list)
-    omission in fontification.el: c*** highlighting, harmless?
+** Completion: c*** command is not completed
+   (is not in the -completions list) omission in fontification.el:
+    c*** highlighting, harmless?
 
 ** Completion: Mouse selections from the *Ansys-completion* buffer
    are only inserted in the upcased state.
@@ -19,8 +16,8 @@
 ** M-j: When there is already a `&' in a format command M-j
    inserts a redundant one
 
-** M-Tab is captured under windows and some Linux desktops
-   Workaround: Press instead M-Tab the ESC key and then the Tab key
+** M-Tab is captured under Windows and some Linux desktops
+   Workaround: Press instead of M-Tab the ESC key and then the Tab key
 
 * v12.0.1:
 ** schedule 
@@ -32,14 +29,16 @@ Apr.: release, presentation
 *** bugs
 - -license-status does not correctly check for -lmutil-program
 
+- ansys-template.el:38:29:Warning: `save-excursion' defeated by `set-buffer'
+
 *** miscellaneous
-- emacs 22.1 Jun 2007, E 23 on RHEL?
-
-- make-local-variable not possible in buffers without file?
-
 - update, restructure -mode-help, section for code compilation?
 
 - checkdoc
+
+- debian stable E22.2, emacs 22.1 Jun 2007, E 22 on RHEL?
+
+- dbus support of workbench or integrating emacs in workbench?
 
 - .elc, what happens when some .el file is changed, load or load-file, what
   happens with compilation and autoload?
@@ -54,15 +53,16 @@ Apr.: release, presentation
 
 - check whether all undocumented commands (find-tag
   "Ansys_undocumented_commands") are still working in v12
-
-- C-c C-c copy whole line (line with line-break or not)?
-  make it consistent with M-w
   
 - variable ansys-last-skeleton is not used   
 
+- make-local-variable not possible in buffers without file?
+
 ** general release procedures
-README -- installation (Emacs Wiki) and accompanying files
-mode-help -- usage & configuration
+README -- installation (Emacs Wiki format) and accompanying files,
+       features, news, history
+
+mode-help -- mode usage & configuration
 
 - update the mode help
   complete skeleton menus.
@@ -76,8 +76,9 @@ mode-help -- usage & configuration
   profiling, major mode conventions: multiple loading of this
   mode?.
 
-- check Emacs pretests, emacs-snapshots, clash with Emacs releases
-  (yearly Emacs cycle)?
+- check Emacs versions on longterm OS systems compile with 22.X, then
+  pretests, emacs-snapshots, clash with Emacs releases (yearly Emacs
+  cycle)?
   
 - update Emacs wiki (README), Google Code with download packages, home
   page update all version numbers everywhere: Emacs wiki, Google Code
@@ -89,7 +90,6 @@ mode-help -- usage & configuration
   <lkrueger@cadfem.de>), AnsysWB community, Ansys users club
   <tom.tumbrink@t-online.de> <admin@auc-ev.de>, the Focus guys (PADT)
   <info@padtinc.com>, Holger Sparr <sparr@mfkrs1.mw.tu-dresden.de>.
-
 
   klemens.kieninger@continental-corporation.com,
   zlakto.penzar@continental-corporation.com,
@@ -105,13 +105,17 @@ mode-help -- usage & configuration
   sgotthold@cadfem.de,
   sheldonimaoka@yahoo.com,
 
-Subject: Editor support for working with Ansys APDL
+Subject: Editor support for working with Ansys APDL processes
 
 Hi,
 
-finally another release (12.0.1) of Ansys mode for Emacs, downloadable from
- http://code.google.com/p/ansys-mode
-below you'll find a list of its features and what's new.
+finally the release for Ansys Version 12 of Ansys mode for Emacs,
+downloadable from:
+
+  http://code.google.com/p/ansys-mode
+
+Below you'll find a summary of its features and what's new in this
+release.
 
 - Emacs package repository, elpa http://tromey.com/elpa/?
 
@@ -124,14 +128,14 @@ below you'll find a list of its features and what's new.
    interface standards example: e. g. scroll-bar default location
    Workaround: use in the beginning mouse and buttons.
 
-   TAB key, C-s, C-c,
+   TAB, M-TAB keys, C-s, C-c,
    C-v, C-x, C-y, C-z CUA-mode examples: (setq
    scroll-preserve-screen-position t) (delete-selection-mode t)
 
    convenient pre-configured emacs archive with Ansys mode.
 
 -- casual APDL file viewer (whetting the appetite)
-   convenience features?
+   convenience features? C-c C-v
    syntax fontification, especially variable highlighting
    Ansys menu
    command-help   M-n/p M-?
@@ -142,29 +146,33 @@ below you'll find a list of its features and what's new.
    Emacs-calc
       C-c C-u, C-c C-c
    Ansys symbol completion and emacs expansion C-c ] -- -close-block
+   M-/ -- expand abbrev
    default (,) commands but most */ can't be "*repeated"
    M-w (copies line)
+   commenting out
    colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
    _return & _status values
-   preview insert skeletons (alternatively abbrev mode?)
+   preview C-c C-s (completion), insert skeletons
+   (alternatively abbrev mode?)
    display user variables
    *go not for interactive mode! -> *if *else *endif
-   commenting out
    selecting blocks C-M-a/b setting mark!
    loading help navigator
    display license status	-license-status C-c C-l
 
 -- hardcore Ansys/APDL user <- Linux Notebook/machine
    switch off menu, tools, scroll-bar
-   Ansys mode help
-   Emacs-calc
+   Ansys mode help: C-h m, selfdocumenting features
    online Ansys/Emacs process and debugging environment
    C-c C-u, C-c C-c,  C-c C-q
    tail mode of *.err C-c C-e
    abort file
    positions -> in bookmarks/registers/clone buffer?
    C-c @ outline stuff with indirect-buffer
-
+   Dired, Calendar
+   shell-, config-mode, emacsclient, terminal-, ssh-support
+   C-S-backspace
+   
 Conclusion/Summary?
 
 * Further versions
@@ -177,7 +185,7 @@ Conclusion/Summary?
 - display alternatives to/swap deprecated element types
 
 - M-? the command help does not work when there are solver ignored
-  characters behind the unique command name, example: *VWROOOO.
+  characters behind the unique command name, example: *VWROOOOM.
 
 - M-? Provide also help for commented out commands
 
@@ -198,6 +206,8 @@ Conclusion/Summary?
    
 - warn when C-c C-c tries to send a block command (complete to full
   block?)
+
+- take care when region isn't complete in -send-to-ansys (send whole line)
 
 - C-c C-c skips empty lines and comments this is not always desirable
   -> make this optional -> filter process input?
@@ -237,6 +247,9 @@ Conclusion/Summary?
   called again with working run warn and optionally remove the ansys
   lock file before starting a run
 
+- search in -job for /filn arguments as default job name like in
+  -display-error-file
+
 ** Skeletons and abbrevs
 - make outline string in skeletons configurable
 
@@ -270,12 +283,15 @@ Conclusion/Summary?
   must *go:label be unambiguous?
 
 ** Miscellaneous
-- the highlighting colours are only tested with white on black
-  background
+- E23.2 mouse-choose-completion obsolete
 
-- make C-j, M-j adhere to default (,) commands
+- Configure the highlighting colours with black on white background
 
-- supply command for clearing not important results, .rst, .log, ...
+- C-j, M-j are not skipping to `,' whith default command (from second
+  line onwards)!
+
+- supply command for clearing recursively not important process files:
+  .rst, .log, ..., supply a customisaton variable
 
 - Ansys mode debian .deb package
 
@@ -289,9 +305,6 @@ Conclusion/Summary?
 - commands shorter than 4 chars are not allowed with additional chars
   adjust this to -highlighting-level 0
 
-- search in -job for /filn arguments as default job name like in
-  -display-error-file
-
 - Make Ansys mode also working solely with ansys-mode.el
 
 - make M-C-h more intelligent like M-h (if mark...)
@@ -303,16 +316,15 @@ Conclusion/Summary?
 
 - is outline-mode enabled? no! make default?, outline
 
-- take care when region isn't complete in -send-to-ansys (send whole line)
-
 - take care of setup procedure: v110/ansys/apdl/start110.ans
   /MPLIB,READ,/ansys_inc/v110/ansys/matlib
 
 - C-c C-v show (optionally) only variables defined up to current
-  cursor line
-
-- C-j is not skipping to `,' whith default command (from second line
-  onwards)!
+  cursor line.  Make the line number display in
+  `ansys-display-variables' (hyper-)links to the corresponding code
+  line in the respective APDL file.  (See `occur' function.)  Or use
+  the imenu mechanism for this and display the variables in the
+  speedbar
 
 - removing/renaming/checking abort file?
 
@@ -360,11 +372,6 @@ Conclusion/Summary?
 
 - provide a list of options for the -license function, set this
   function in the defcustom lmstat -a etc.
-
-- make the line number display in `ansys-display-variables'
-  (hyper-)links to the corresponding code line in the respective APDL
-  file.  (See `occur' function.)  Or use the imenu mechanism for this
-  and display the variables in the speedbar
 
 - auto-indent-switch as defcustom?
 
