--- a/README
+++ b/README
@@ -38,24 +38,24 @@ the Ansys mode Wiki (http://www.emacswiki.org/cgi-bin/wiki/AnsysMode).
 
 The code is based on Ansys version 12.0 and is written for the editor
 GNU Emacs (not consciously targeted for XEmacs).  It is tested with
-Emacs-23.1 under XP and GNU/Linux.  The code compiles also with
-Emacs-22.1, i. e. it should work with this and any newer version.
+Emacs-23.1 under XP32, XP64 and GNU/Linux.  The code compiles also
+with Emacs-22.1, i. e. it should work with this and any newer version.
 (Emacs-23.1 was relased in Jul. 2009, Emacs-22.1 in Jul. 2007.)  The
 code can be loaded but won't run flawlessly without minor adaptions
-for Emacs-21.3 (release Mar. 2003).
+for Emacs-21.3 (released in Mar. 2003).
 
-If applicable grab the package of a pre-compiled Win32 Emacs-23.1 with
-a preconfigured Ansys mode at the above Google Code site and unpack
-the archive in any directory on your system.  Or visit
-http://ftp.gnu.org/pub/gnu/emacs/ for an original version of GNU
-Emacs.
+If applicable please grab the package of a pre-compiled Emacs-23.1 for
+Windows together with a preconfigured Ansys mode at above Google Code
+site and unpack this archive anywhere on your system.  Alternatively
+visit http://ftp.gnu.org/pub/gnu/emacs/ for an original version of GNU
+Emacs and/or extract and configure the Ansys mode package separately.
 
 The Ansys solver control and communication capabilities are somewhat
 restricted on non-UNIX systems.
 
-Ansys Mode needs now more than one lisp file, be sure you have all
-necessary files, please see the == Installation == section for a list
-of them.
+The latest Ansys Mode consists of more than one lisp file, be sure you
+have all necessary files, please see the == Installation == section
+for a list of them.
 
 == features ==
 
@@ -128,7 +128,7 @@ Sources:
 * ansys-process.el
 
 (and possibly their compiled versions with the suffix '.elc'.  If you
-are using these files for an older version of Emacs than 23 please
+are using the mode with an older version of Emacs than 23 please
 remove the .elc files.)
 
 Auxiliaries:
@@ -153,7 +153,7 @@ file with a .mac suffix.  Have fun!
 (If you did not install Ansys in its default Installation directory on
 drive C:, please adjust the `default.el' file in Emacs' `site-lisp'
 directory accordingly, otherwise you are not able to start
-'anslic_admin' or the Ansys help program from Emacs.)
+'anslic_admin' or the Ansys help program directly from Ansys mode.)
 
 For existing Emacs installations:
 
@@ -174,8 +174,8 @@ stage 8-)) and conclude this input with the "RET" key. Emacs will then
 prompt you for a file, type in the directory where you have extracted
 the code and "ansys-mode.el" (or better "ansys-mode.elc" for speed
 reasons if the compiled version is available) and press RET to execude
-the loading.  Thereafter call the mode function itself with `M-x
-ansys-mode RET' for every new or existing APDL file.
+the loading.  Thereafter call the mode itself with `M-x ansys-mode
+RET' for every new or existing APDL file.
 
 ==== More convenient way; file configuration necessary ====
 
