--- a/branches/12.0.1/TODO
+++ b/branches/12.0.1/TODO
@@ -27,11 +27,12 @@ Apr.: release, presentation
 
 ** workload
 *** bugs
+- delete-selection mode does not work with SPACE under Ansys mode
 
 *** miscellaneous
 - update, restructure -mode-help, section for code compilation?
 
-- checkdoc, -process.el, -mode.el \\<keymap> & \\[function]
+- checkdoc, -template.el, -process.el, -mode.el done except \\<keymap> & \\[function]
 
 - ansys-mode.el: -complet-symbol: `save-excursion' defeated by `set-buffer'
 
