--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -1,4 +1,6 @@
 #labels Featured
+===Installation:===
+
 *Version 12.0.1:* Please have a look at the Emacs Wiki (http://www.emacswiki.org/emacs/AnsysMode) or the accompanying README.
 
 *Version 11.0.2:* Please read the instructions in the source file 'ansys-mode.el'.
